--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root {
+  color-scheme: light;
   --text: #6b6375;
   --text-h: #08060d;
   --bg: #fff;
